Adapté le code suite à la traduction en anglais du web-service Tiers v3.
git-svn-id: https://svn.etat-de-vaud.ch/SVN_SOCLE/registre/unireg/trunk@61448 cb3efa0a-b8b0-9f43-a4c8-343d8b7e4362